examples/datalog/15_arithmetic/17_arithmetic_on_aggregates.dl.out

Executing script: /Users/samuel.picek/InputLayer/FlowLog/course/final-project/examples/datalog/15_arithmetic/17_arithmetic_on_aggregates.dl

> .db create test_arith_agg
Database 'test_arith_agg' created.
Switched to database: test_arith_agg
> .db use test_arith_agg
Switched to database: test_arith_agg
> +sales[(1, 100, 500), (1, 101, 300), (1, 102, 200), (2, 100, 400), (2, 101, 600), (3, 100, 700), (3, 101, 100), (3, 102, 200), (3, 103, 300)].
Inserted 9 facts into 'sales'.
> view store_total(Store: int, sum<Amount>: int) :- sales(Store, _, Amount).
View 'store_total' registered.
> view store_count(Store: int, count<Product>: int) :- sales(Store, Product, _).
View 'store_count' registered.
> ?- store_total(S, T).
3 rows:
  (1, 1000)
  (2, 1000)
  (3, 1300)
> ?- store_count(S, C).
3 rows:
  (1, 3)
  (2, 2)
  (3, 4)
> view doubled_total(Store: int, Total*2: int) :- store_total(Store, Total).
View 'doubled_total' registered.
> ?- doubled_total(S, D).
3 rows:
  (1, 2000)
  (2, 2000)
  (3, 2600)
> view manual_avg(Store: int, Total/Count: int) :- store_total(Store, Total), store_count(Store, Count).
View 'manual_avg' registered.
> ?- manual_avg(S, A).
3 rows:
  (1, 333.3333333333333)
  (2, 500)
  (3, 325)
> view builtin_avg(Store: int, avg<Amount>: int) :- sales(Store, _, Amount).
View 'builtin_avg' registered.
> ?- builtin_avg(S, A).
3 rows:
  (1, 333.3333333333333)
  (2, 500)
  (3, 325)
> view grand_total(sum<A>: int) :- sales(_, _, A).
View 'grand_total' registered.
> ?- grand_total(G).
1 rows:
  (3300)
> view with_bonus(Store: int, Total + Total/10: int) :- store_total(Store, Total).
Script error: Line 44: Parse error: Invalid computed column expression: 'Total + Total/10'

